src/test/test-models/good/parser-generator/prim_var_transformed_param_block.stan
transformed parameters {
  real p2;
  array[4] real<lower=0, upper=1> ar_p2;
}

