src/test/test-models/bad/lang/bad7.stan
data {
  real y;
}
transformed parameters {
  real z;

  y = 10.0;
}
model { 
}
   
